# mail_r

./: .env  Cargo.toml
migrations/2020-11-19-165647_create_lists/: up.sql
migrations/2020-11-19-165651_create_users/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: lists.rs  mod.rs  models.rs  schema.rs  users.rs
tests/: db_tests.rs
tests/common/: mod.rs
