[package]
name = "mailr"
version = "0.1.0"
authors = ["Marcus Köhler <khler.marcus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
mail-core = "0.6.2"
mail-headers = "0.6.6"
mail-smtp = "0.3.0"
diesel = { version = "1.4.5", features = [ "mysql" ] }
dotenv = "0.15.0"
